--- a/brand_intr.html
+++ b/brand_intr.html
@@ -5,56 +5,9 @@
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/common.css">
 		<link rel="stylesheet" href="css/amazeui.min.css">
+		<link rel="stylesheet" href="css/brand_intr.css">
 		<title>春海扬明品牌介绍</title>
 	</head>
-	<style>
-		.pic-intr{
-			position:relative;
-			margin-bottom: 0;
-		}
-		.p5{
-			width:40%;
-			margin-left: 16%;
-		}
-		.p6{
-			width:27%;
-			position:absolute;
-			bottom:0;
-			left: 56%;
-		}
-		.p7{
-			width:calc(67% + 0.5rem);
-			margin-left: 16%;
-		}
-		.p89{
-			width:calc(67% + 0.5rem);
-			margin-left: 16%;
-			overflow: hidden;
-		}
-		.p89>img{
-			display: inline-block;
-			width:49%;
-		}
-		.p89>img:first-child{
-			float: left;
-		}
-		.p89>img:last-child{
-			float: right;
-		}
-		.p10>img{
-			margin:45px 0;
-		}
-		.p44{
-			overflow: hidden;
-		}
-		.p44>img{
-			width:50%;
-			float: left;
-		}
-		.scrolllisten{
-			opacity: 0;
-		}
-	</style>
 	<body>
 		<!-- 引入页面头部 -->
 		<div id="header"></div>
@@ -196,6 +149,7 @@
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/popper.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/vue.js" type="text/javascript" charset="utf-8"></script>
 		<script>
 			$(document).ready(function(){
 				//引入网页头部
