--- a/weidianying.html
+++ b/weidianying.html
@@ -5,13 +5,12 @@
     <title>微电影</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.css">
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/layer.js"></script>
     <link rel="stylesheet" href="./css/base.css"/>
     <link rel="stylesheet" href="./css/weidianying.css"/>
     <link rel="stylesheet" href="./css/layer.css"/>
+	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/footer.css">
+	<script src="./js/jquery.min.js"></script>
 </head>
 <body>
 <!-- 引入页面头部 -->
@@ -405,8 +404,8 @@
             })
         </script>
         <div class="col-lg-6 col-md-12 movie_hover"  id="movie_banner_8">
-            <div class="movie_banner">
-                <img class="movie_banner_con" src="img/c8a650e088a17a44dbe0a14cdc927a6a.jpg" alt=""/>
+            <div class="movie_banner h-100">
+                <img class="movie_banner_con h-100" src="img/c8a650e088a17a44dbe0a14cdc927a6a.jpg" alt=""/>
                 <img class="movie_banner_cover" src="img/movie_banner_cover.png" alt=""/>
             </div>
             <div class="movie_text">
@@ -450,6 +449,12 @@
 </div>
 <!--引入底部html-->
 <div id="footer"></div>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/popper.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="js/bootbox.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="./js/layer.js"></script>
+<script src="js/vue.js" type="text/javascript" charset="utf-8"></script>
 <script>
     $(document).ready(function(){
         //引入网页头部
