--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,20 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+	<head>
+	    <meta charset="UTF-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	    <link rel="stylesheet" href="css/bootstrap.css">
+	    <link rel="stylesheet" href="css/common.css">
+		   <link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/swiper.min.css">
+	<title>春海扬明全球旅拍</title>
+</head>
+<body> -->
 <link rel="stylesheet" href="css/footer.css">
 
 <div class="foot-nav-pic">
-	<img class="w-100" src="img/bottom_img.jpg" alt="">
+	<img class="w-100 position-relative" src="img/bottom_img.jpg" alt="">
 	<div class="foot-nav w-100">
 		<ul class="foot-nav-title d-flex list-unstyled justify-content-around">
 			<li class="mr-3"><a href="#">BRAND</a></li>
@@ -16,8 +29,8 @@
 		</ul>
 	</div>
 </div>
-<div class="foot-pic">
-	<img class="w-100 " src="img/fkqdao.png" alt="">
+<div class="foot-pic position-relative">
+	<img class="w-100" src="img/fkqdao.png" alt="">
 	<div class="foot row mr-0">
 		<div class="left col-6">
 			<div class="left-t row ml-5">
@@ -87,12 +100,12 @@
 		</div>
 		<div class="right col-6">
 			<div class="row">
-				<div class="col-6 p-0 ml-5">
+				<div class="col-6 p-0 ml-5" id="post">
 					<span class="r-right-firstline">全球200+拍摄目的地,让旅行更有意义</span><br>
 					<span class="r-right">新人注册送大礼!</span><br>
-					<input class="input mt-3" type="text" placeholder="姓名"><br>
-					<input class="input mt-3" type="text" placeholder="手机"><br>
-					<button class="submit mt-3">提交</button>
+					<input class="input mt-3" maxlength="10" type="text" placeholder="姓名" v-model.trim="name"><br>
+					<input class="input mt-3" maxlength="11" type="text" placeholder="手机" v-model.trim="phone"><br>
+					<button class="submit mt-3" @click="doPost">提交</button>
 					<hr class="mt-5 w-75">
 				</div>
 				<div class="col-3 p-0 pl-5">
@@ -119,8 +132,6 @@
 					<br>
 					Address: 258, Changjiang Road, Shanghai (Int'l<br> Intelligence Valley) ONLY PHOTO Global Headquarters</span>
 			</p>
-
-
 		</div>
 	</div>
 	<div class="com-intr row pb-5  mr-0">
@@ -134,3 +145,62 @@
 		</div>
 	</div>
 </div>
+<script src="js/bootbox.min.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript">
+	new Vue({
+		el: "#post",
+		data: {
+			name: "", //姓名
+			phone: "", //手机号
+		},
+		methods: {
+			//提交
+			doPost: function() {
+				var _this = this; //vue实例
+				if (_this.name == "") {
+					bootbox.alert({
+						title: "提示",
+						message: "请输入你的姓名",
+					});
+					return;
+				}
+				if (_this.phone == "") {
+					bootbox.alert({
+						title: "提示",
+						message: "请输入手机号",
+					});
+					return;
+				}
+				
+				//ajax
+				$.ajax({
+					url:"http://127.0.0.1:8080/user/order",
+					type:"post",
+					data:{
+						name:_this.name,
+						phone:_this.phone
+					},
+					success:function(result){
+						if(result.state == 102){
+							bootbox.alert({
+								title: "提示",
+								message: result.message,
+							});
+						}else{
+							bootbox.alert({
+								title: "提示",
+								message: "提交成功,我们会尽快联系您",
+								callback:function(){
+									_this.name = "";
+									_this.phone = "";
+								}
+							});
+						}
+					}
+				})
+			}
+		}
+	})
+</script>
+<!-- </body>
+</html> -->
