--- a/huodong.html
+++ b/huodong.html
@@ -10,6 +10,8 @@
     <script src="./js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/base.css"/>
     <link rel="stylesheet" href="css/huodong.css"/>
+	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 <!-- 引入页面头部 -->
@@ -97,6 +99,8 @@
 
 <!--引入底部html-->
 <div id="footer"></div>
+<script src="js/bootbox.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/vue.js" type="text/javascript" charset="utf-8"></script>
 <script>
     $(document).ready(function(){
         //引入网页头部
