--- a/zuopin2.html
+++ b/zuopin2.html
@@ -5,11 +5,10 @@
     <title>旅拍作品第二页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.css">
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/base.css"/>
     <link rel="stylesheet" href="css/kepian1.css"/>
+	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 <!-- 引入页面头部 -->
@@ -275,6 +274,11 @@
 
 <!--引入底部html-->
 <div id="footer"></div>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/popper.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
+<script src="js/bootbox.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/vue.js" type="text/javascript" charset="utf-8"></script>
 <script>
     $(document).ready(function(){
         //引入网页头部
